@@ -2,6 +2,7 @@
         * [ADDED]: New option in configuration dialog to decide whether you want to keep NULL values when entering empty strings in cells (new, more intuitive behavior), or overwrite NULLs with empty string values (as it used to be so far).
         * [ADDED]: Editor window has now "Find" and "Replace" toolbar buttons for those functions (which were already there, available under shortcuts).
         * [ADDED]: #3106 ScriptingTcl has now "tcl_init" command to invoke full interpreter initialization, which creates [clock] commands and some others. It's not invoked automatically to avoid performane issues.
+        * [ADDED]: #3136 Added "--master-config" command line option to have a settings file (regular SQLiteStudio config file) that all running SQLiteStudio instances import settings from. More details in manual on wiki page.
         * [CHANGE]: #3135 Re-enabled possibility to close database list panel (and reopen it from the View menu entry).
         * [BUGFIX]: #3118 #3124 Fixed double precision numbers formatting.
         * [BUGFIX]: DbAndroid plugin: Fixed 'adb' automatic detection under Linux.
